--- a/client/style.css
+++ b/client/style.css
@@ -251,9 +251,7 @@ p {
 
 html {
     background-color:#080808;
-    background-image:url("http://euw.leagueoflegends.com/sites/default/files/upload/environmentart-sru-04_1920.jpg");
-    #background-image:url("http://cdn.leagueoflegends.com/game-info/1.1.9/images/backdrop/bg-summoners-rift.jpg");
-    #background-image:url("/img/bg.png");
+    background-image:url("/img/bg.jpg");
     background-size:cover;
     background-attachment: fixed;
     height:100%;
